[package]
name = "dac8568"
version = "0.0.12"
authors = ["Oliver <18360865+ost-ing@users.noreply.github.com>"]
edition = "2021"
description = "A simple platform agnostic library for the Texas Instruments DAC8568, DAC8168 and DAC7568"
keywords = ["embedded-hal", "driver", "DAC7568", "DAC8168", "DAC8568"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ost-ing/dac8568"

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"

[features]
default = []
